metabase-ecs-rds/sg.tf
resource "aws_security_group" "dev_london_metabase_ecs_sg" {
  name        = "dev-london-metabase-sg"
  description = "Security Group for dev-london-metabase-svc"
  vpc_id      = var.vpc
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "dev_london_general_purpose_rds_sg" {
  name        = "dev-london-general-purpose-rds-sg"
  description = "Security Group for dev-london-general-purpose-rds"
  vpc_id      = var.vpc
  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["172.31.0.0/16"] # Default VPC CIDR
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
